--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/jquery-3.7.1.min.js" defer></script>
+	<script src="js/slick.min.js" defer></script>
+	<script src="js/script.js" defer></script>
 	<title>CROVEX MarketPlace</title>
 </head>
 <body>
-	
+	<header>
+		<nav class="headerNav-container">
+			<a href="#!"><img src="img/CROVEX.svg" alt="logo"></a>
+			<div class="headerNav_searchContainer">
+				<input type="text" placeholder="Найди у нас!">
+				<button><img src="img/camera.svg" alt="searchPhoto"></button>
+			</div>
+			<ul class="headerNav_menuContainer">
+				<li><a href="#!"><img src="img/profile.svg" alt="profile">Профиль</a></li>
+				<li><a href="#!"><img src="img/orders.svg" alt="orders">Заказы</a></li>
+				<li><a href="#!"><img src="img/favorites.svg" alt="favorites">Избранное</a></li>
+				<li><a href="#!"><img src="img/basket.svg" alt="basket">Корзина</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main class="main-container">
+		<section class="saleSlider slider">
+			<a class="item" href="#!"><img src="img/sale/SALE.png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (1).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (2).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (3).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (4).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (5).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (6).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (7).png" alt=""></a>
+			<a class="item" href="#!"><img src="img/sale/SALE (8).png" alt=""></a>
+		</section>
+		<aside class="mainMenuContainer">
+			<nav class="mainMenuContainer_menu">
+
+			</nav>
+		</aside>
+		<section>
+
+		</section>
+	</main>
+	<footer></footer>
 </body>
 </html>
