--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<nav class="headerNav-container">
 			<a href="#!"><img src="img/CROVEX.svg" alt="logo"></a>
-			<div class="headerNav_searchContainer">
+			<div class="headerNav__searchContainer">
 				<input type="text" placeholder="Найди у нас!">
 				<button><img src="img/camera.svg" alt="searchPhoto"></button>
 			</div>
@@ -37,13 +37,93 @@
 			<a class="item" href="#!"><img src="img/sale/SALE (7).png" alt=""></a>
 			<a class="item" href="#!"><img src="img/sale/SALE (8).png" alt=""></a>
 		</section>
-		<aside class="mainMenuContainer">
-			<nav class="mainMenuContainer_menu">
-
-			</nav>
-		</aside>
-		<section>
-
+		<section class="mainProductBlock">
+			<aside class="mainMenuContainer">
+				<nav class="mainMenuContainer_menu">
+					
+				</nav>
+			</aside>
+			<div class="mainProductBlock__cardContainer">
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="buttonMore">
+					<a href="#!">Посмотреть еще</a>
+				</div>
+			</div>
+		</section>
+		<section class="saleTwo">
+			<a href="#!"><img src="img/sale/sale10.png" alt="sale"></a>
+			<a href="#!"><img src="img/sale/sale11.png" alt="sale"></a>
 		</section>
 	</main>
 	<footer></footer>
