--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
 	<script src="js/script.js" defer></script>
 	<title>CROVEX MarketPlace</title>
 </head>
+
 <body>
 	<header>
 		<nav class="headerNav-container">
@@ -40,7 +42,7 @@
 		<section class="mainProductBlock">
 			<aside class="mainMenuContainer">
 				<nav class="mainMenuContainer_menu">
-					
+
 				</nav>
 			</aside>
 			<div class="mainProductBlock__cardContainer">
@@ -125,7 +127,101 @@
 			<a href="#!"><img src="img/sale/sale10.png" alt="sale"></a>
 			<a href="#!"><img src="img/sale/sale11.png" alt="sale"></a>
 		</section>
+		<section class="mainProductBlock">
+			<div class="mainProductBlock__cardContainer">
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+			</div>
+		</section>
+		<section class="saleTree">
+			<a href="#!"><img src="img/ADVIRTISING 2.png" alt="sale"></a>
+		</section>
+		<section class="mainProductBlock">
+			<div class="mainProductBlock__cardContainer">
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+				<div class="cardContainer_card">
+					<a href="#!"><img src="img/card/photo.png" alt="Product"></a>
+					<p class="card_sale">1 173 ₽ <span>9 700 ₽</span></p>
+					<p class="card_description"><span>EZ GEAR</span> / Коврик для рабочего стола и мыши</p>
+					<a href="#!"><img src="img/Vector.svg" alt="basket">Завтра</a>
+				</div>
+			</div>
+		</section>
+		<section class="saleFour">
+			<a href="#!"><img src="img/image 27.png" alt="sale"></a>
+			<a href="#!"><img src="img/image 28.png" alt="sale"></a>
+			<a href="#!"><img src="img/image 29.png" alt="sale"></a>
+			<a href="#!"><img src="img/image 30.png" alt="sale"></a>
+		</section>
 	</main>
-	<footer></footer>
+	<footer>
+		<nav class="footerContainer">
+			<div class="footerContainer__first">
+				<p>Ф.И.О.: <br><span>Сазонкин Михаил Сергеевич</span><br><span>Жгун Сергей Павлович</span></p>
+			</div>
+			<div class="footerContainer__second">
+				<h2 class="footerContainer__social__title">КОНКУРС:</h2>
+				<div class="footerContainer__social__Svgs">
+					<p>Учебное заведение: <br><span>Богучарский многопрофильный колледж им. М.А.Шолохова</span></p>
+				</div>
+			</div>
+			<div class="footerContainer__third">
+				<p>Наставник: <br><span>Глобина Юлия Михайловна</span></p>
+				<p>Сайт сделан: 16.03.2024</p>
+			</div>
+		</nav>
+	</footer>
 </body>
+
 </html>
