конец конечного конца

--- a/index.html
+++ b/index.html
@@ -42,7 +42,20 @@
 		<section class="mainProductBlock">
 			<aside class="mainMenuContainer">
 				<nav class="mainMenuContainer_menu">
-
+					<ul>
+						<li><a href="#!"><img src="img/menuIcon/image 7-11.png" alt="icon">Девушкам</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-8.png" alt="icon">Мужчинам</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-10.png" alt="icon">Детям</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-9.png" alt="icon">Игрушки</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-7.png" alt="icon">Электронника</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7.png" alt="icon">Дом</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-1.png" alt="icon">Автотовары</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-2.png" alt="icon">Зоотовары</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-6.png" alt="icon">Спорт</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-3.png" alt="icon">Продукты</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-4.png" alt="icon">Книги</a></li>
+						<li><a href="#!"><img src="img/menuIcon/image 7-5.png" alt="icon">Здоровье</a></li>
+					</ul>
 				</nav>
 			</aside>
 			<div class="mainProductBlock__cardContainer">
